Add missing wxPy lib to Makefile.in Add missing quantize.h to filelist.txt Update config.sub
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@18896 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-wxwindows2.4 (2.4.1) unstable; urgency=low
+wxwindows2.4 (2.4.0.2) unstable; urgency=low
 
+  * Added missing quantize.h to install.  Closes: #178135
   * Removed unnecessary -dev deps.
   * move wxwin.m4 &c out of the runtime package and conflict with earlier
     versions that didn't.  Also nuke some empty dir cruft that slipped by.
