Added wxPy/distutils to the source package and try again for 2.4.0.3
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@18964 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+wxwindows2.4 (2.4.0.3) unstable; urgency=low
+
+  * Changed Conflict to Replaces so people can use 2.4 -dev before all
+    their 2.3 deps are gone.  Closes: #178305
+  * Added wxPy supplied 2.3 distutils to the source package, apparently the
+    standard 2.2 one is now insufficient.  This hopefully Closes: #178457
+
+ -- Ron Lee <ron@debian.org>  Mon, 27 Jan 2003 17:36:59 -0800
+
 wxwindows2.4 (2.4.0.2) unstable; urgency=low
 
   * Added missing quantize.h to install.  Closes: #178135
