fix broken doc build.
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@18966 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/docs/latex/wx/pagedlg.tex
+++ b/docs/latex/wx/pagedlg.tex
@@ -228,7 +228,7 @@ Returns a reference to the \helpref{print data}{wxprintdata} associated with thi
 
 \membersection{wxPageSetupDialogData::Ok}\label{wxpagesetupdialogdataok}
 
-constfunc{bool}{Ok}{\void}
+\constfunc{bool}{Ok}{\void}
 
 Returns TRUE if the print data associated with the dialog data is valid.
 This can return FALSE on Windows if the current printer is not set, for example.
