xxxParamBitmap, support for wxArtProvider bitmaps
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@19025 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/wxPython/wxPython/tools/XRCed/CHANGES
+++ b/wxPython/wxPython/tools/XRCed/CHANGES
@@ -1,3 +1,21 @@
+0.0.9-4
+-------
+
+Implemented standard bitmap selection.
+
+Fixed a bug in FlexGridSizer code.
+
+0.0.9-3
+-------
+
+File browsing (for bitmaps/icons, etc.) had a small problem when current 
+file was not saved yet.
+
+0.0.9-2
+-------
+
+Small bug fix for initial don't panic message.
+
 0.0.9-1
 -------
 
