marked dbkeyg.h as a wxBase file (fixes 685857)
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@19205 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -170,6 +170,13 @@ wxThread and related classes:
 OTHER CHANGES
 =============
 
+2.4.1
+-----
+
+wxBase
+
+- compilation with wxUSE_ODBC=1 fixed (dbkeyg.h file was missing in the archive)
+
 2.4.0.2
 -------
 
