Applied patch [ 686843 ] File Dialog Wildcard Bug
A bug was introduced in generic/src/filedlgg.cpp
between versions 2.2.9 and 2.4 that causes incomplete
file extensions to be appended to filenames not having
extensions after a user changes the wildcard index in
the filedialog. This patch reverts back to the correct
code.

Bob Downey


git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@19240 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -184,6 +184,13 @@ All:
 
 - Added missing wx/quantize.h to install.
 
+wxGTK:
+
+- Added wxEVT_MENU_OPEN event generation.
+- Fixed bug in generic file selector causing incomplete file extensions to
+  be appended to filenames with no extension.
+
+
 2.4.0
 -----
 
