fix bug with timezone calculations when WX_GMTOFF_IN_TM si true
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@19365 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -185,6 +185,7 @@ Unix (GUI):
 wxBase
 
 - compilation with wxUSE_ODBC=1 fixed (dbkeyg.h file was missing in the archive)
+- bug in wxDateTime with timezones on systems with tm_gmtoff in struct tm fixed
 
 wxGTK:
 
