Refactored, enhanced and added capabilites for the DrawXXXList functions, inspired by code from Chris Barker.
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@19373 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/wxPython/CHANGES.txt
+++ b/wxPython/CHANGES.txt
@@ -63,6 +63,10 @@ always call them.  The functions are:
        wxApp_SetMacExitMenuItemId
        wxApp_SetMacHelpMenuTitleName
 
+Refactored, enhanced and added capabilites for the DrawXXXList
+functions, inspired by code from Chris Barker.
+
+
 
 
 2.4.0.2
