--- a/wxPython/wxPython/tools/XRCed/CHANGES.txt
+++ b/wxPython/wxPython/tools/XRCed/CHANGES.txt
@@ -1,3 +1,12 @@
+0.0.9-6
+-------
+
+Added dialog unit support.
+
+Dealing with non-specified required values (set to defaults, if exist).
+
+Added 'minsize' parameter of sizeritem.
+
 0.0.9-5
 -------
 
