Updated change log
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@19488 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/wxPython/CHANGES.txt
+++ b/wxPython/CHANGES.txt
@@ -66,6 +66,14 @@ always call them.  The functions are:
 Refactored, enhanced and added capabilites for the DrawXXXList
 functions, inspired by code from Chris Barker.
 
+The wxWindows .mo language catalog files are now installed in a
+subdirectory of the wxPython package dir on MSW since that platform
+doesn't have a standard place for them.
+
+Added missing deselect methods for wxGrid.
+
+Fixed typemaps for wxGridCellCoordsArray.
+
 
 
 
