update change log
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@19505 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/wxPython/CHANGES.txt
+++ b/wxPython/CHANGES.txt
@@ -74,6 +74,7 @@ Added missing deselect methods for wxGrid.
 
 Fixed typemaps for wxGridCellCoordsArray.
 
+Updated to the 0.9a version of PyCrust
 
 
 
