added xmlFlags and -i option to turn off wxXRC_USE_LOCALE
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@19570 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/wxPython/wxPython/tools/XRCed/CHANGES.txt
+++ b/wxPython/wxPython/tools/XRCed/CHANGES.txt
@@ -7,6 +7,8 @@ Dealing with non-specified required values (set to defaults, if exist).
 
 Added 'minsize' parameter of sizeritem.
 
+Added '-i' option to turn off translations and use international characters.
+
 0.0.9-5
 -------
 
