Fixed a interpreter lock problem in the __eq__ and __ne__ methods in wxSize and etc.
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@19623 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/wxPython/CHANGES.txt
+++ b/wxPython/CHANGES.txt
@@ -17,6 +17,8 @@ unicode.
 Fixed problem where the wrong class name could sometimes be used for
 OOR.
 
+Fixed a interpreter lock problem in the __eq__ and __ne__ methods in
+wxSize and etc.
 
 
 
